Stop the nav from jumping 1px

--- a/web/css/default.css
+++ b/web/css/default.css
@@ -982,7 +982,7 @@ body.docs .c-nhs_blue-tint_10 { background-color: #e5f0f9; }
 /** Side navigation, vertical list. */
 .side-nav { font-size: 15px; list-style: none; width: 300px; margin: 1em 0 0; }
 .side-nav.fixed { position: fixed; top: 0; }
-.side-nav li { background-color: #00adc6; margin: 2px 0; padding: 5px 10px; }
+.side-nav li { background-color: #00adc6; margin: 0 0 2px; padding: 5px 10px; }
 .side-nav li:hover, .side-nav li.active { background-color: #888888; }
 .side-nav li a { color: white; display: block; text-decoration: none; }
 
