--- a/web/sass/modules/_side-nav.scss
+++ b/web/sass/modules/_side-nav.scss
@@ -14,7 +14,7 @@
 
   li {
     background-color: $c-nhs_aquablue;
-    margin: 2px 0;
+    margin: 0 0 2px;
     padding: 5px 10px;
 
     &:hover, &.active {
